--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ boto3>=1.29.0
 botocore>=1.32.0
 django-storages>=1.14.0
 python-decouple>=3.8
+python-dotenv>=1.0.0
 dj-database-url>=2.1.0
 gunicorn>=21.2.0
 psutil>=5.9.0
