--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -34,6 +34,7 @@ jobs:
         pip install -r requirements.txt
         
         # Create .env file with secrets
+        echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" > .env
         echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" > .env
         echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> .env
         echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> .env
