--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 ﻿Django>=4.2.0,<5.0
 djangorestframework>=3.14.0
+djangorestframework-simplejwt>=5.2.0
 psycopg2-binary>=2.9.0
 PyJWT>=2.8.0
 django-cors-headers>=4.3.0
