--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -19,13 +19,15 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '20'
         cache: 'npm'
         cache-dependency-path: frontend/package-lock.json
         
     - name: Install dependencies
       working-directory: ./frontend
-      run: npm ci
+      run: |
+        rm -f package-lock.json
+        npm install
       
     - name: Build application
       working-directory: ./frontend
