Fixing pages deployment issue after adding custom domain. Fixing manifest to remove missing logo192.png, updating index.html to remove missing logo, adding redirect for client-side routing, automating 404.html build in deployment.

--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -34,6 +34,12 @@ jobs:
       run: npm run build
       env:
         REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
+
+    - name: Create 404.html for SPA routing
+      working-directory: ./frontend
+      run: |
+        # Copy built index.html as 404.html
+        cp build/index.html build/404.html
         
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
