updating faq, readme

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "quizcanvas-frontend",
-  "version": "0.1.0",
+  "version": "1.0.1",
+  "description": "QuizCanvas frontend application with secure password reset",
   "private": true,
   "homepage": "https://quizcanvas.xyz",
   "dependencies": {
